# pyturbo

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  environment-dev.yml  environment.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: commit-verification.yml  linters.yml  tests.yml
docs/: build_doc.py  build_instructions.md
docs/source/: conf.py  index.rst
pyturbo/: __init__.py  _version.py
pyturbo/mft/: compressor.py
pyturbo/notebooks/: combustor_simple_aero.ipynb  compressor_geom.ipynb  compressor_simple.ipynb  compressor_simple_aero.ipynb  compressorsimpleaero.ipynb  gas_generator.ipynb  gas_generator_simple.ipynb  gas_generator_simple_aero.ipynb  inlet_simple_aero.ipynb  mixer_aero.ipynb  nacelle_geom.ipynb  nozzle_simple_aero.ipynb  shaft.ipynb  turbine_simple_aero.ipynb  turbinesimpleaero.ipynb  turbofan.ipynb
pyturbo/ports/: __init__.py  dynamics_connector.py  fluid_port.py  fluidport.py  frame_port.py  keypoints.py  keypoints_port.py  shaftport.py  view_port.py
pyturbo/systems/: __init__.py  atmosphere.py  combustor_simple_aero.py  compressor.py  compressor_mft_aero.py  compressor_simple.py  compressor_simple_aero.py  compressor_simple_geom.py  compressormftaero.py  gas_generator_simple_aero.py  generic_simple_geom.py  inlet_simple_aero.py  mixer_aero.py  nacelle_simple_geom.py  nozzle_simple_aero.py  shaft.py  turbinesimpleaero.py  turbofan_weight.py
tests/: default_test.py  test_atmosphere.py  test_combustor.py  test_compressor.py  test_compressor_aero.py  test_compressor_geom.py  test_fan_module.py  test_fan_module_geom.py  test_gas_generator.py  test_generic.py  test_generic_geom.py  test_get_view.py  test_ideal_gas.py  test_inlet_module.py  test_mixer_fluid.py  test_mixer_shaft.py  test_notebooks.py  test_nozzle.py  test_nozzle_aero.py  test_shaft.py  test_simple_nozzle.py  test_structures.py  test_turbine.py  test_turbofan.py  test_turbofan_geom.py  test_turbofan_weight.py  test_view_port.py
(+109 files in other folders)
