[metadata]
name = pyturbo
version = attr: pyturbo._version.__version__
author = Adrien DELSALLE
description = twiinIT demos based on simple use cases
long_description = file: README.md, HISTORY.md
home-page = http://github/twiinit/turbomachinery-demos.git
license = Proprietary License
license-file = LICENSE
keywords = demos, twiinit, turbomachinery
classifiers =
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: Other/Proprietary License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
