# Copyright (C) 2022-2023, twiinIT
# SPDX-License-Identifier: BSD-3-Clause

[metadata]
name = pyturbo
version = attr: pyturbo._version.__version__
author = twiinIT
description = turbomachinery models
long_description = file: README.md, HISTORY.md
home-page = http://github/twiinit/pyturbo.git
license = BSD 3-clause
keywords = twiinit, turbomachinery
classifiers =
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
